--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.css
@@ -22,7 +22,7 @@
   
   .validador{
     font-size: 10px;
-    color: #f90000;
+    color: #EB1E23;
     text-align: left;
     margin-bottom: 10px;
   }
@@ -198,19 +198,30 @@
     margin-bottom: 5px;
   }
 
-  
-/*   
-  .login input[type=text] {
-    background-color: #fff;
+  .login .input-wrapper {
+    position: relative;
     width: 100%;
-    padding: 4px 7px;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 1px;
-    box-sizing: border-box;
-    font-size: 12px;
-  } */
-
+  }
+  
+  
+  .login .input.password {
+    padding: 15px 35px 15px 15px;
+  }
+  
+  .login .input-icon {
+    color: #191919;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    left: 12px;
+    top: 66%;
+    transform: translateY(-50%);
+  }
+  
+  .login .input-icon.password {
+    left: unset;
+    right: 12px;
+  }
 
   .login input:required {
     border: 1px solid #EB1E23;
@@ -394,7 +405,7 @@
     left: 0;
     height: 10px;
     width: 10px;
-    background-color: #eee;
+    background-color: #FFBEBA;
     border-radius: 50%;
     margin-top: 3px;
   }
