--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.html
@@ -60,6 +60,7 @@
             <label for="celular">CELULAR</label>
             <input type="text" id="celular" name="celular" placeholder="Ej.:999123045"  [(ngModel)]="celular" (change)="changeCelular($event)" maxlength="9" (keypress)="restrictNumeric($event)">
             <p class="validador" *ngIf="validadorCelular">Debe ingresar el celular.</p>
+            <p class="validador" *ngIf="validadorCelularLength">El teléfono debe contener 9 digitos</p>
           </div>
     
           <div>
@@ -72,23 +73,34 @@
           <label for="correo">CORREO</label>
           <input type="text" id="correo" name="correo" placeholder="Ej.:camila.flores@ejemplo.com"  [(ngModel)]="correo"  (change)="changeCorreo($event)" maxlength="150" >
           <p class="validador" *ngIf="validadorCorreo">Debe ingresar el correo.</p>
-          <p class="validador" *ngIf="validadorCorreo2">Correo inválido.</p>
+          <p class="validador" *ngIf="validadorCorreoInvalido">Correo inválido.</p>
         </div>
   
-        <div>
+      <div>
+        <div class="input-wrapper">
           <label for="contrasena">CONTRASEÑA</label>
-          <input type="password"  id="contrasena" name="contrasena" placeholder="" [(ngModel)]="contrasena" (change)="changeContrasena($event)" maxlength="150" >
-          <button (click)="mostrarContrasena()">mostrar</button>
-          <p class="validador" *ngIf="validadorContrasena">Debe ingresar la contraseña.</p>
+          <input type="password"  id="contrasena" name="contrasena" placeholder="" [(ngModel)]="contrasena" (change)="changeContrasena($event)" maxlength="150" >      
+          <svg (click)="mostrarContrasena()" xmlns="http://www.w3.org/2000/svg" class="input-icon password" viewBox="0 0 20 20" fill="currentColor">
+          <path d="M10 12a2 2 0 100-4 2 2 0 000 4z" />
+          <path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd" />
+        </svg>
         </div>
-  
-        <div>
+        <p class="validador" *ngIf="validadorContrasena">Debe ingresar la contraseña.</p>
+      </div>
+
+      <div>
+        <div class="input-wrapper">
           <label for="rep_contrasena">REPETIR CONTRASEÑA</label>
-          <input type="password"  id="rep_contrasena" name="rep_contrasena" placeholder="" [(ngModel)]="rep_contrasena" (change)="changeContrasenaRep($event)" maxlength="150" >
-          <button (click)="mostrarContrasenaRepe()">mostrar</button>
-          <p class="validador" *ngIf="validadorContrasenaRep">Debe ingresar la contraseña </p>
-          <p class="validador" *ngIf="validadorContrasenaRepetir">Debe repetir la contraseña </p>
+          <input type="password"  id="rep_contrasena" name="rep_contrasena" placeholder="" [(ngModel)]="rep_contrasena" (change)="changeContrasenaRep($event)" maxlength="150" >      
+          <svg (click)="mostrarContrasenaRepe()" xmlns="http://www.w3.org/2000/svg" class="input-icon password" viewBox="0 0 20 20" fill="currentColor">
+            <path d="M10 12a2 2 0 100-4 2 2 0 000 4z" />
+            <path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd" />
+          </svg>
         </div>
+      <p class="validador" *ngIf="validadorContrasenaRep || validadorContrasenaRepetir">No coincide con la contraseña ingresada.</p>
+      </div>
+
+
         <div class="column">
           <div class="left">
             <label class="radio">Al menos un simbolo
