--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.html
@@ -72,8 +72,8 @@
         <div>
           <label for="correo">CORREO</label>
           <input type="text" id="correo" name="correo" placeholder="Ej.:camila.flores@ejemplo.com"  [(ngModel)]="correo"  (change)="changeCorreo($event)" maxlength="150" >
-          <p class="validador" *ngIf="validadorCorreo">Debe ingresar el correo.</p>
-          <p class="validador" *ngIf="validadorCorreoInvalido">Correo inválido.</p>
+             <!--<p class="validador" *ngIf="validadorCorreo">Debe ingresar el correo.</p>-->
+             <p class="validador" *ngIf="validadorCorreo || validadorCorreoInvalido">Correo inválido.</p> 
         </div>
   
       <div>
