--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/recuperar-contrasena-empresa/recuperar-contrasena-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/recuperar-contrasena-empresa/recuperar-contrasena-empresa.component.html
@@ -14,12 +14,12 @@
   
           <div>
             <label for="ruc">RUC</label>
-            <input type="text" id="ruc" name="ruc" placeholder="Ej.:10152346872">
+            <input type="text" id="ruc" name="ruc" [(ngModel)]="numeroDocumento" placeholder="Ej.:10152346872">
          </div>
-          <div>
+          <!-- <div>
               <label for="numeroDoc">NÚMERO DE DOCUMENTO</label>
               <input type="text" id="numeroDoc" name="numeroDoc" placeholder="Ej.:15234687">
-          </div>
+          </div> -->
     
     
     
