--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/recuperar-contrasena-persona/recuperar-contrasena-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/recuperar-contrasena-persona/recuperar-contrasena-persona.component.html
@@ -15,17 +15,17 @@
          
           <div>
               <label for="numeroDoc">NÚMERO DE DOCUMENTO</label>
-              <input type="text" id="numeroDoc" name="numeroDoc" placeholder="Ej.:15234687">
+              <input type="text" id="numeroDoc" name="numeroDoc"  [(ngModel)]="numeroDocumento" placeholder="Ej.:15234687">
           </div>
     
      
           <div>
             <label for="correo">CORREO ELECTRONICO</label>
-            <input type="text" id="correo" name="correo" placeholder="Ej.:camila.flores@ejemplo.com">
+            <input type="text" id="correo" name="correo"  [(ngModel)]="email" placeholder="Ej.:camila.flores@ejemplo.com">
           </div>
     
         <div>
-          <button class="buttonSiguiente" disabled>Recuperar contraseña</button>    
+          <button class="buttonSiguiente" (click)="fnBtnRecuperarContrasena()">Recuperar contraseña</button>    
         </div>
   
         <div class="center">
