--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-empresa/registro-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-empresa/registro-empresa.component.html
@@ -98,7 +98,7 @@
           <label for="celular">CELULAR</label>
           <input type="text" id="celular" name="celular" placeholder="Ej.:999123045" maxlength="9" [(ngModel)]="celular" (change)="changeCelular($event)" (keypress)="restrictNumeric($event)">
           <p class="validador" *ngIf="validadorCelular">Debe ingresar el celular.</p>
-          <p class="validador" *ngIf="validadorCelularLength">El teléfono debe contener 9 digitos</p>
+          <p class="validador" *ngIf="validadorCelularLength">El celular debe contener 9 digitos</p>
         </div>
   
         <div>
@@ -133,6 +133,7 @@
           </svg>
           </div>
           <p class="validador" *ngIf="validadorContrasena">Debe ingresar la contraseña.</p>
+          <p class="validador" *ngIf="validadorRequisitos">La contraseña debe cumplir con los requistos</p>
         </div>
   
         <div>
@@ -150,14 +151,14 @@
         <div class="column">
             <div class="left">
               <label class="radio">Al menos un simbolo
-               <input type="radio"  name="radioSimbolo" [checked]="ValidarSimbolo" disabled>
+               <input type="radio"  name="radioSimbolo" [checked]="ValidadorSimbolo" disabled>
                <span class="checkradio"></span>
               </label>
            </div>
             
             <div class="right">
               <label class="radio">Al menos un número
-               <input type="radio"  name="radioNumero" [checked]="ValidarNumeros" disabled >
+               <input type="radio"  name="radioNumero" [checked]="ValidadorNumeros" disabled >
                <span class="checkradio"></span>
               </label>
            </div>
@@ -167,28 +168,30 @@
          <div class="columnRadio">
           <div class="left">
             <label class="radio">Al menos una mayuscula
-             <input type="radio"  name="radioMayus" [checked]="ValidarMayuscula" disabled>
+             <input type="radio"  name="radioMayus" [checked]="ValidadorMayuscula" disabled>
              <span class="checkradio"></span>
             </label>
          </div>
           
           <div class="right">
             <label class="radio">Más de 8 digitos
-             <input type="radio"  name="radioDigitos" [checked]="Validar8Digitos" disabled>
+             <input type="radio"  name="radioDigitos" [checked]="Validador8Digitos" disabled>
              <span class="checkradio"></span>
             </label>
          </div>
        </div>
-  
-        <label class="check" id="c1">Acepto los términos y la <a href="#">Política de Protección de Datos</a>
-          <input type="checkbox">
-          <span class="checkmark"></span>
-        </label>
-  
-        <label class="check" id="c1">Acepto los términos y la mensajeria
-          <input type="checkbox" >
-          <span class="checkmark"></span>
-        </label>  
+
+
+       <label class="check" id="c1">Acepto los términos y la <a href="#">Política de Protección de Datos</a>
+        <input type="checkbox" name="terminos_politica" [(ngModel)]="terminos_politica"  (change)="changeTerminos($event)">
+        <span class="checkmark"></span>
+      </label>
+
+      <label class="check" id="c1">Acepto los términos y la mensajeria
+        <input type="checkbox" name="terminos_mensajeria" [(ngModel)]="terminos_mensajeria"  (change)="changeTerminos($event)" >
+        <span class="checkmark"></span>
+      </label>
+      <p class="validador" *ngIf="validadorTerminos">Marcar los términos y condiciones.</p>
        
         <div>
           <button class="buttonSiguiente">Registrar</button>
