--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.html
@@ -39,7 +39,7 @@
             </div>        
             <div class="right">
                 <label for="numeroDoc">NÚMERO DOCUMENTO</label>
-                 <input type="text" id="numeroDoc" name="numeroDoc" placeholder="Ej.:15234687" [(ngModel)]="numeroDoc" (change)="changeNroDocumento($event)" maxlength="30" (keypress)="restrictNumeric($event)" (blur)="buscarReniec()">  <!--(blur)="buscarReniec()" -->
+                 <input type="text" id="numeroDoc" name="numeroDoc" placeholder="Ej.:15234687" [(ngModel)]="numeroDoc" (change)="changeNroDocumento($event)" maxlength="12" (keypress)="restrictNumeric($event)" (blur)="buscarReniec()">  <!--(blur)="buscarReniec()" -->
                 <p class="validador" *ngIf="validadorNroDocumento">Debe ingresar el número de documento.</p>
             </div>
         </div>
@@ -86,6 +86,7 @@
         </svg>
         </div>
         <p class="validador" *ngIf="validadorContrasena">Debe ingresar la contraseña.</p>
+        <p class="validador" *ngIf="validadorRequisitos">La contraseña debe cumplir con los requistos</p>
       </div>
 
       <div>
@@ -104,14 +105,14 @@
         <div class="column">
           <div class="left">
             <label class="radio">Al menos un simbolo
-             <input type="radio"  name="radioSimbolo" [checked]="ValidarSimbolo" disabled>
+             <input type="radio"  name="radioSimbolo" [checked]="ValidadorSimbolo" (change)="changeRequisitosContrasena($event)" disabled>
              <span class="checkradio"></span>
             </label>
          </div>
           
           <div class="right">
             <label class="radio">Al menos un número
-             <input type="radio"  name="radioNumero" [checked]="ValidarNumeros" disabled>
+             <input type="radio"  name="radioNumero" [checked]="ValidadorNumeros" (change)="changeRequisitosContrasena($event)" disabled>
              <span class="checkradio"></span>
             </label>
          </div>
@@ -120,29 +121,30 @@
         <div class="columnRadio">
         <div class="left">
           <label class="radio">Al menos una mayuscula
-           <input type="radio"  name="radioMayus" [checked]="ValidarMayuscula" disabled>
+           <input type="radio"  name="radioMayus" [checked]="ValidadorMayuscula" (change)="changeRequisitosContrasena($event)" disabled>
            <span class="checkradio"></span>
           </label>
         </div>
         
         <div class="right">
           <label class="radio">Más de 8 digitos
-           <input type="radio"  name="radioDigitos" [checked]="Validar8Digitos" disabled>
+           <input type="radio"  name="radioDigitos" [checked]="Validador8Digitos" (change)="changeRequisitosContrasena($event)" disabled>
            <span class="checkradio"></span>
           </label>
         </div>
       </div>
 
 
-        <label class="check" id="c1">Acepto los términos y la <a href="#">Política de Protección de Datos</a>
-          <input type="checkbox">
-          <span class="checkmark"></span>
-        </label>
+      <label class="check" id="c1">Acepto los términos y la <a href="#">Política de Protección de Datos</a>
+        <input type="checkbox" [(ngModel)]="terminos_politica"  (change)="changeTerminos($event)">
+        <span class="checkmark"></span>
+      </label>
 
-        <label class="check" id="c1">Acepto los términos y la mensajeria
-          <input type="checkbox" >
-          <span class="checkmark"></span>
-        </label>
+      <label class="check" id="c1">Acepto los términos y la mensajeria
+        <input type="checkbox" [(ngModel)]="terminos_mensajeria"  (change)="changeTerminos($event)" >
+        <span class="checkmark"></span>
+      </label>
+      <p class="validador" *ngIf="validadorTerminos">Marcar los términos y condiciones.</p>
 
         <div>
           <button class="buttonSiguiente" (click)="registroPersonaService()">Registrar</button>
