--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-empresa/registro-empresa.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-empresa/registro-empresa.component.css
@@ -26,12 +26,6 @@ h5 {
     font-size: 0.75rem;
 }
 
-.validador{
-  font-size: 10px;
-  color: #EB1E23;
-  text-align: left;
-  margin-bottom: 10px;
-}
 
 input {
   background-image: none;
@@ -66,7 +60,6 @@ a {
   display: grid;
   place-items: center;
   background-color: #eee;
-  margin-left: 180px;
 }
 
 /* ---------- BUTTON ---------- */
@@ -138,9 +131,8 @@ a {
 
 .login__header {
   background-color: #fff;
-  border-top-left-radius: 1.25em;
-  border-top-right-radius: 1.25em;
   color: #000;
+  padding-top: 0.5em;
 }
 
 .login__header h3 {
@@ -156,6 +148,7 @@ a {
   margin-bottom: 0%;
   padding-top: 0%;
 }
+
 
 
 .login__header :first-child {
@@ -176,11 +169,12 @@ a {
   border-bottom-right-radius: 0em;
   color: #777;
   display: grid;
-  gap: 0.875em;
-  padding: 1em 1em;
+  gap: 0.5em;
+  padding: 1.4em 1.4em 1.4em 1.4em;
   
 }
- 
+
+
 .login label{
   text-align: left;
   font-size: 12px;
@@ -199,6 +193,7 @@ a {
   font-size: 12px;
   margin-bottom: 5px;
 }
+
   
 .login .input-wrapper {
   position: relative;
@@ -237,6 +232,10 @@ a {
   border: 1px solid #ccc;
 }
 
+.login input:disabled {
+  background: #eee;
+}
+
 .login select {
   padding: 5px 7px;
   width: 80%;
@@ -244,7 +243,9 @@ a {
   border: 1px solid #ccc;
   border-radius: 1px;
   box-sizing: border-box;
+  margin-bottom: 5px;
 }
+
 
 .login select:required {
   border: 1px solid #EB1E23;
@@ -266,12 +267,12 @@ a {
 
 .logo-produce, h1, p {
   text-align: left;
-  padding-top: 0px;
+  padding-bottom: 5px;
 } 
 
 .logo-aplicacion, h1, p {
   text-align: center;
-  padding-top: 0px;
+  padding-bottom: 5px;
 } 
 
 .column {
@@ -279,6 +280,7 @@ a {
   flex-direction: row;
   flex-wrap: wrap;
 }
+
 .left {
   width: 50%;
 }
@@ -311,7 +313,7 @@ a {
       display: block;
       position: relative;
       padding-left: 20px;
-      margin-bottom: 12px;
+      margin-bottom: 14px;
       cursor: pointer;
       font-size: 22px;
     }
@@ -435,4 +437,9 @@ a {
     margin-bottom: 20px;
   }
   
-  
+  .validador{
+    font-size: 10px;
+    color: #EB1E23;
+    text-align: left;
+    margin-bottom: 8px;
+  }
