--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/recuperar-contrasena-persona/recuperar-contrasena-persona.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/recuperar-contrasena-persona/recuperar-contrasena-persona.component.css
@@ -28,12 +28,6 @@ h3 {
 }
  
 
-.validador{
-  font-size: 10px;
-  color: #f90000;
-  text-align: left;
-  margin-bottom: 10px;
-}
 
 input {
   background-image: none;
@@ -70,8 +64,8 @@ a {
   display: grid;
   place-items: center;
   background-color: #eee;
-  margin-left: 180px;
 }
+
 
 /* ---------- BUTTON ---------- */
 
@@ -143,9 +137,8 @@ a {
 
 .login__header {
   background-color: #fff;
-  border-top-left-radius: 1.25em;
-  border-top-right-radius: 1.25em;
   color: #000;
+  padding-top: 0.5em;
 }
 
 .login__header h3 {
@@ -161,7 +154,6 @@ a {
   margin-bottom: 0%;
   padding-top: 0%;
 }
-
 
 .login__header :first-child {
   margin-top: 0;
@@ -181,8 +173,8 @@ a {
   border-bottom-right-radius: 0em;
   color: #777;
   display: grid;
-  gap: 0.875em;
-  padding: 1em 1em;
+  gap: 0.5em;
+  padding: 1.4em 1.4em 1.4em 1.4em;
   
 }
 
@@ -192,7 +184,6 @@ a {
   font-size: 12px;
   margin: 0px;
 }
-
 
 .login input {
   background-color: #fff;
@@ -207,19 +198,6 @@ a {
 }
 
 
-/*   
-.login input[type=text] {
-  background-color: #fff;
-  width: 100%;
-  padding: 4px 7px;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 1px;
-  box-sizing: border-box;
-  font-size: 12px;
-} */
-
-
 .login input:required {
   border: 1px solid #EB1E23;
 }
@@ -232,6 +210,10 @@ a {
   border: 1px solid #ccc;
 }
 
+.login input:disabled {
+  background: #eee;
+}
+
 .login select {
   padding: 5px 7px;
   width: 80%;
@@ -239,6 +221,7 @@ a {
   border: 1px solid #ccc;
   border-radius: 1px;
   box-sizing: border-box;
+  margin-bottom: 5px;
 }
 
 
@@ -264,12 +247,12 @@ a {
 
 .logo-produce, h1, p {
   text-align: left;
-  padding-top: 0px;
+  padding-bottom: 5px;
 } 
 
 .logo-aplicacion, h1, p {
   text-align: center;
-  padding-top: 0px;
+  padding-bottom: 5px;
 } 
 
 .column {
@@ -285,6 +268,7 @@ a {
 }
 .center {
   text-align: center;
+  margin-bottom: 12px;
 }
 
 .disabled {
@@ -304,7 +288,7 @@ background-color: #000;
   display: block;
   position: relative;
   padding-left: 20px;
-  margin-bottom: 12px;
+  margin-bottom: 14px;
   cursor: pointer;
   font-size: 22px;
 }
@@ -428,3 +412,10 @@ background-color: #000;
   display: block;
 }
 
+
+.validador{
+  font-size: 10px;
+  color: #EB1E23;
+  text-align: left;
+  margin-bottom: 8px;
+}
