--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-empresa/registro-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-empresa/registro-empresa.component.html
@@ -1,28 +1,25 @@
 <body class="align">
     <div class="login">
-      <form action="#" class="login__form" method="POST">      
       <header class="login__header">
-          <div class="logo-produce">
-              <img src="https://www.jymcontadores.pe/wp-content/uploads/2020/06/PRODUCE-2-770x160.jpg" alt="Logo" title="Logo" width="138">
-            </div>  
-          <div class="logo-aplicacion">
-            <img src="https://vusp.produce.gob.pe/Content/img/logo.png" alt="Logo" title="Logo" width="138">
+        <div class="logo-produce">
+            <img src="https://www.jymcontadores.pe/wp-content/uploads/2020/06/PRODUCE-2-770x160.jpg" alt="Logo" title="Logo" width="138">
+          </div>  
+        <div class="logo-aplicacion">
+          <img src="https://vusp.produce.gob.pe/Content/img/logo.png" alt="Logo" title="Logo" width="138">
+        </div>
+          <h3>REGISTRATE</h3>
+          <p>Persona Jurídica</p>
+          <div class="Pasos">
+            <button class="buttonPaso" (click)="clickPaso1()" >1</button>
+            <button class="buttonPaso"  [ngClass]="ispaso2 === true  ? 'disabled' : 'null'" (click)="clickPaso2()" >2</button>
+            <button class="buttonPaso"  [ngClass]="ispaso3 === true  ? 'disabled' : 'null'" (click)="clickPaso3()" >3</button>
+            <button class="buttonPaso"  [ngClass]="ispaso4 === true  ? 'disabled' : 'null'" (click)="clickPaso4()" >4</button>
           </div>
-            <h3>REGISTRATE</h3>
-            <p>Persona Jurídica</p>
-      </header>
-  
-      <div class="Pasos">
-        <button class="buttonPaso" (click)="clickPaso1()" >1</button>
-        <button class="buttonPaso"  [ngClass]="ispaso2 === true  ? 'disabled' : 'null'" (click)="clickPaso2()" >2</button>
-        <button class="buttonPaso"  [ngClass]="ispaso3 === true  ? 'disabled' : 'null'" (click)="clickPaso3()" >3</button>
-        <button class="buttonPaso"  [ngClass]="ispaso4 === true  ? 'disabled' : 'null'" (click)="clickPaso4()" >4</button>
-      </div>
-  
-    <div *ngIf="isVisiblePaso1">
+    </header>
 
+    <form class="login__form" >     
+    <div *ngIf="isVisiblePaso1">
       <h5 class="center">DATOS EMPRESA</h5>
-  
       <div>
           <label for="ruc">RUC</label>
           <input type="text" id="ruc" name="ruc" placeholder="Ej. : 20543216789"  [(ngModel)]="ruc" (change)="changeRuc($event)"  maxlength="11" (keypress)="restrictNumeric($event)">
