--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.html
@@ -1,20 +1,21 @@
 <body class="align">
-    <div class="login">    
-      <div class="login__form">  
+    <div class="login">  
       <header class="login__header">
-          <div class="logo-produce">
-              <img src="https://www.jymcontadores.pe/wp-content/uploads/2020/06/PRODUCE-2-770x160.jpg" alt="Logo" title="Logo" width="138">
-          </div>  
-          <div class="logo-aplicacion">
-            <img src="https://vusp.produce.gob.pe/Content/img/logo.png" alt="Logo" title="Logo" width="138">
+        <div class="logo-produce">
+            <img src="https://www.jymcontadores.pe/wp-content/uploads/2020/06/PRODUCE-2-770x160.jpg" alt="Logo" title="Logo" width="138">
+        </div>  
+        <div class="logo-aplicacion">
+          <img src="https://vusp.produce.gob.pe/Content/img/logo.png" alt="Logo" title="Logo" width="138">
+        </div>
+          <h3>REGISTRATE</h3>
+          <p>Persona Natural</p>      
+          <div class="center">
+            <button class="buttonPaso" (click)="clickPaso1()" >1</button>
+            <button class="buttonPaso" [ngClass]="ispaso2 === true ? 'disabled' : 'null'" (click)="clickPaso2()">2</button>
           </div>
-            <h3>REGISTRATE</h3>
-            <p>Persona Natural</p>
-      </header>
-      <div class="center">
-        <button class="buttonPaso" (click)="clickPaso1()" >1</button>
-        <button class="buttonPaso" [ngClass]="ispaso2 === true ? 'disabled' : 'null'" (click)="clickPaso2()">2</button>
-      </div>
+    </header>  
+    
+      <div class="login__form">  
       <div *ngIf="isVisiblePaso1">
         <label class="check" id="c1">TENGO RUC
           <input type="checkbox" [(ngModel)]="tengoRuc" (change)="changeTengoRuc($event)">
@@ -46,13 +47,13 @@
     
           <div>
             <label for="apellidos">APELLIDOS</label>
-            <input type="text" id="apellidos" name="apellidos" placeholder="Ejm:Flores Sánchez" [(ngModel)]="apellidos" (change)="changeApeliidos($event)" maxlength="150">
+            <input type="text" id="apellidos" name="apellidos" placeholder="Ejm:Flores Sánchez" [(ngModel)]="apellidos" (change)="changeApeliidos($event)" maxlength="150" disabled>
             <p  class="validador" *ngIf="validadorApellidos">Debe ingresar los apellidos.</p>
           </div>
     
           <div>
             <label for="nombres">NOMBRES</label>
-            <input type="text" id="nombres" name="nombres" placeholder="Ej.:Camila" [(ngModel)]="nombres" (change)="changeNombres($event)" maxlength="150">
+            <input type="text" id="nombres" name="nombres" placeholder="Ej.:Camila" [(ngModel)]="nombres" (change)="changeNombres($event)" maxlength="150" disabled>
             <p class="validador" *ngIf="validadorNombres">Debe ingresar los nombres.</p>
           </div>
     
@@ -60,7 +61,7 @@
             <label for="celular">CELULAR</label>
             <input type="text" id="celular" name="celular" placeholder="Ej.:999123045"  [(ngModel)]="celular" (change)="changeCelular($event)" maxlength="9" (keypress)="restrictNumeric($event)">
             <p class="validador" *ngIf="validadorCelular">Debe ingresar el celular.</p>
-            <p class="validador" *ngIf="validadorCelularLength">El teléfono debe contener 9 digitos</p>
+            <p class="validador" *ngIf="validadorCelularLength">El celular debe contener 9 digitos</p>
           </div>
     
           <div>
