--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-empresa/sesion-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-empresa/sesion-empresa.component.html
@@ -1,19 +1,17 @@
 <body class="align">
     <div class="login">
-      <form action="#" class="login__form" method="POST">      
       <header class="login__header">
-          <div class="logo-produce">
-              <img src="https://www.jymcontadores.pe/wp-content/uploads/2020/06/PRODUCE-2-770x160.jpg" alt="Logo" title="Logo" width="138">
-            </div>  
-          <div class="logo-aplicacion">
-            <img src="https://vusp.produce.gob.pe/Content/img/logo.png" alt="Logo" title="Logo" width="138">
-          </div>
-            <h3>Inicio de Sesión</h3>
-            <p>Persona Jurídica</p>
-      </header>
-  
+        <div class="logo-produce">
+            <img src="https://www.jymcontadores.pe/wp-content/uploads/2020/06/PRODUCE-2-770x160.jpg" alt="Logo" title="Logo" width="138">
+          </div>  
+        <div class="logo-aplicacion">
+          <img src="https://vusp.produce.gob.pe/Content/img/logo.png" alt="Logo" title="Logo" width="138">
+        </div>
+          <h3>Inicio de Sesión</h3>
+          <p>Persona Jurídica</p>
+    </header>
 
-
+      <form class="login__form" >      
         <div>
              <label for="ruc">N° de RUC del cliente</label>
             <input type="text" id="ruc" name="ruc"  [(ngModel)]="ruc"  placeholder="Ej.:10152346872">
