--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-persona/sesion-persona.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-persona/sesion-persona.component.css
@@ -20,12 +20,7 @@ h2 {
   font-size: 1.75rem;
 }
 
-.validador{
-  font-size: 10px;
-  color: #f90000;
-  text-align: left;
-  margin-bottom: 10px;
-}
+
 
 input {
   background-image: none;
@@ -62,7 +57,6 @@ a {
   display: grid;
   place-items: center;
   background-color: #eee;
-  margin-left: 180px;
 }
 
 /* ---------- BUTTON ---------- */
@@ -135,9 +129,8 @@ a {
 
 .login__header {
   background-color: #fff;
-  border-top-left-radius: 1.25em;
-  border-top-right-radius: 1.25em;
   color: #000;
+  padding-top: 0.5em;
 }
 
 .login__header h3 {
@@ -153,6 +146,7 @@ a {
   margin-bottom: 0%;
   padding-top: 0%;
 }
+
 
 
 .login__header :first-child {
@@ -173,8 +167,8 @@ a {
   border-bottom-right-radius: 0em;
   color: #777;
   display: grid;
-  gap: 0.875em;
-  padding: 1em 1em;
+  gap: 0.5em;
+  padding: 1.4em 1.4em 1.4em 1.4em;
   
 }
 
@@ -199,18 +193,6 @@ a {
 }
 
 
-/*   
-.login input[type=text] {
-  background-color: #fff;
-  width: 100%;
-  padding: 4px 7px;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 1px;
-  box-sizing: border-box;
-  font-size: 12px;
-} */
-
 
 .login input:required {
   border: 1px solid #EB1E23;
@@ -224,6 +206,11 @@ a {
   border: 1px solid #ccc;
 }
 
+.login input:disabled {
+  background: #eee;
+}
+
+
 .login select {
   padding: 5px 7px;
   width: 80%;
@@ -231,6 +218,7 @@ a {
   border: 1px solid #ccc;
   border-radius: 1px;
   box-sizing: border-box;
+  margin-bottom: 5px;
 }
 
 
@@ -254,35 +242,42 @@ a {
 
 
 
+
 .logo-produce, h1, p {
   text-align: left;
-  padding-top: 0px;
+  padding-bottom: 5px;
 } 
 
 .logo-aplicacion, h1, p {
   text-align: center;
-  padding-top: 0px;
+  padding-bottom: 5px;
 } 
+
 
 .column {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
 }
+
 .left {
   width: 50%;
+  margin-top: 5px;
 }
 .right {
   width: 50%;
+  margin-top: 5px;
 }
 .center {
   text-align: center;
+  margin-bottom: 12px;
 }
 
 .disabled {
   opacity: 0.6;
   cursor: not-allowed;
 }
+
 
 /*--------------Checkbox------------*/
 
@@ -420,3 +415,9 @@ background-color: #000;
   display: block;
 }
 
+.validador{
+  font-size: 10px;
+  color: #EB1E23;
+  text-align: left;
+  margin-bottom: 8px;
+}
