--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/recuperar-contrasena-empresa/recuperar-contrasena-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/recuperar-contrasena-empresa/recuperar-contrasena-empresa.component.html
@@ -27,7 +27,7 @@
           <button class="buttonSiguiente" disabled>Recuperar contraseña</button>    
         </div>
   
-        <div class="center">
+        <div class="footer">
           <p>¿No tienes una cuenta de empresa?</p>  
           <a href="#">Crea una ahora</a>
         </div>
