--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/recuperar-contrasena-persona/recuperar-contrasena-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/recuperar-contrasena-persona/recuperar-contrasena-persona.component.html
@@ -10,7 +10,7 @@
           <h3>Recuperar contraseña</h3>
           <p>Persona Natural</p>
     </header>
-    
+
       <form action="#" class="login__form" method="POST">              
           <div>
               <label for="numeroDoc">NÚMERO DE DOCUMENTO</label>
@@ -27,7 +27,7 @@
           <button class="buttonSiguiente" (click)="fnBtnRecuperarContrasena()">Recuperar contraseña</button>    
         </div>
   
-        <div class="center">
+        <div class="footer">
           <p>¿No tienes una cuenta de persona?</p>  
           <a href="#">Crea una ahora</a>
         </div>
