--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-empresa/registro-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-empresa/registro-empresa.component.html
@@ -198,10 +198,10 @@
       </div>
     
   
-        <div class="center">
-          <p>¿Ya tienes una cuenta?</p>  
-          <a href="#">Ingresa aquí</a>
-        </div>
+      <div class="footer">
+        <p>¿Ya tienes una cuenta?</p>  
+        <a href="#">Ingresa aquí</a>
+      </div>
       
       </form>
     </div>
