--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.html
@@ -154,7 +154,7 @@
  
     
       </div>
-      <div class="center">
+      <div class="footer">
         <p>¿Ya tienes una cuenta?</p>  
         <a href="#">Ingresa aquí</a>
       </div>
