--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-persona/sesion-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-persona/sesion-persona.component.html
@@ -31,7 +31,7 @@
           <button class="buttonSiguiente" (click)="iniciarSesionPersonaNatural()">Ingresar</button>    
         </div>
   
-        <div class="center">
+        <div class="footer">
           <p>¿No tienes una cuenta de persona?</p>  
           <a href="#">Crea una ahora</a>
         </div>
