--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/recuperar-contrasena-empresa/recuperar-contrasena-empresa.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/recuperar-contrasena-empresa/recuperar-contrasena-empresa.component.css
@@ -416,6 +416,11 @@ background-color: #000;
   margin-bottom: 20px;
 }
 
+.footer {
+  text-align: center;
+  margin-bottom: 0px;
+}
+
 .validador{
   font-size: 10px;
   color: #EB1E23;
