--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/recuperar-contrasena-persona/recuperar-contrasena-persona.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/recuperar-contrasena-persona/recuperar-contrasena-persona.component.css
@@ -412,6 +412,10 @@ background-color: #000;
   display: block;
 }
 
+.footer {
+  text-align: center;
+  margin-bottom: 0px;
+}
 
 .validador{
   font-size: 10px;
