--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-empresa/sesion-empresa.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-empresa/sesion-empresa.component.css
@@ -413,6 +413,11 @@ background-color: #000;
   display: block;
 }
 
+.footer {
+  text-align: center;
+  margin-bottom: 0px;
+}
+
 .validador{
   font-size: 10px;
   color: #EB1E23;
