--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-empresa/sesion-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-empresa/sesion-empresa.component.html
@@ -36,7 +36,7 @@
           <button class="buttonSiguiente" (click)="iniciarSesionPersonaJuridica()" >Ingresar</button>    
         </div>
   
-        <div class="center">
+        <div class="footer">
           <p>¿No tienes una cuenta de empresa?</p>  
           <a href="#">Crea una ahora</a>
         </div>
