--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.html
@@ -156,7 +156,7 @@
       </div>
       <div class="footer">
         <p>¿Ya tienes una cuenta?</p>  
-        <a href="#">Ingresa aquí</a>
+        <p><a href="#">Ingresa aquí</a></p>
       </div>
     </div>
   </div>
