--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/recuperar-contrasena-empresa/recuperar-contrasena-empresa.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/recuperar-contrasena-empresa/recuperar-contrasena-empresa.component.css
@@ -56,8 +56,13 @@ a {
   text-align: center;
   width: 100%;
   color: #000;
+  border-bottom: 1px solid;
 }
- 
+
+a:hover {
+  border-bottom: 0px solid;
+  background: #eee;
+}
 
 /* ---------- ALIGN ---------- */
 .align {
@@ -419,6 +424,7 @@ background-color: #000;
 .footer {
   text-align: center;
   margin-bottom: 0px;
+  font-size: 12px;
 }
 
 .validador{
