--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-empresa/registro-empresa.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-empresa/registro-empresa.component.css
@@ -52,6 +52,12 @@ a {
   text-align: center;
   width: 100%;
   color: #000;
+  border-bottom: 1px solid;
+}
+
+a:hover {
+  border-bottom: 0px solid;
+  background: #eee;
 }
  
 
@@ -436,10 +442,11 @@ a {
     flex-wrap: wrap;
     margin-bottom: 20px;
   }
-  
+
   .footer {
     text-align: center;
     margin-bottom: 0px;
+    font-size: 12px;
   }
   
   .validador{
