--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-persona/registro-persona.component.css
@@ -38,7 +38,7 @@
     padding: 0px;
     text-align: center;
   }
-   
+
   svg {
     height: auto;
     max-width: 100%;
@@ -49,6 +49,12 @@
     text-align: center;
     width: 100%;
     color: #000;
+    border-bottom: 1px solid;
+  }
+
+  a:hover {
+    border-bottom: 0px solid;
+    background: #eee;
   }
    
   
@@ -440,6 +446,7 @@
   .footer {
     text-align: center;
     margin-bottom: 0px;
+    font-size: 12px;
   }
   
   .validador{
