--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-persona/sesion-persona.component.css
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-persona/sesion-persona.component.css
@@ -49,6 +49,12 @@ a {
   text-align: center;
   width: 100%;
   color: #000;
+  border-bottom: 1px solid;
+}
+
+a:hover {
+  border-bottom: 0px solid;
+  background: #eee;
 }
  
 
@@ -418,6 +424,7 @@ background-color: #000;
 .footer {
   text-align: center;
   margin-bottom: 0px;
+  font-size: 12px;
 }
 
 .validador{
